# Monterin

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/lib/: marketing.rs  mod.rs  security.rs
apps/api/src/router/: auth.rs  webhooks.rs
apps/web/: .firebaserc  FREE_MARKETING_TOOLS.md  MARKETING_SETUP.md  MARKETING_TOOLS.md  next.config.ts  package.json
apps/web/.firebase/monterin-2a461/functions/: package-lock.json  package.json  server.js
apps/web/.firebase/monterin-2a461/hosting/: _global-error.html  appointments.html  collections.html  education.html  forge.html  heritage.html  press.html  services.html  terms.html  wasm_gem_bg.wasm
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/appointments/: page.tsx
apps/web/src/app/collections/: page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/education/: page.tsx
apps/web/src/app/faq/: page.tsx
apps/web/src/app/forge/: page.tsx
apps/web/src/app/heritage/: page.tsx
apps/web/src/app/maison/: page.tsx
apps/web/src/app/origins/: page.tsx
apps/web/src/app/press/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/services/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/app/vault/: page.tsx
apps/web/src/components/3d/: InteractiveDiamond.tsx
apps/web/src/contexts/: LanguageContext.tsx
apps/web/src/data/: products.ts
apps/web/src/locales/: en.json  fr.json
apps/web/src/utils/: GeometryUtils.ts
(+552 files in other folders)
